fixed scrollbar issue on wallet page

--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -331,7 +331,7 @@
                         cursor: pointer;
                     }
                     .black_input {
-                        width: 100%;
+                        width: initial;
                         height: 44px;
                         border: none;
                     }
